# SmartPhone-new

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.cpp  resources.qrc
.run/: phone.run.xml
Src/backend/: at_chat.cpp  at_chat.h  at_command.h  serial_port.cpp  serial_port.h
Src/backend/models/: models.h
Src/backend/modem/: modem.cpp  modem.h
Src/backend/modem/dispatchers/: call_dispatcher.cpp  call_dispatcher.h  notification_dispatcher.cpp  notification_dispatcher.h  sms_dispatcher.cpp  sms_dispatcher.h
Src/backend/utils/: cache_manager.cpp  cache_manager.h  decoder.cpp  decoder.h  logging.h  network_manager.cpp  network_manager.h
Src/controller/: controller.cpp  controller.h
Src/gui/: gui.cpp  gui.h
Src/gui/application_screen/: application_screen.cpp  application_screen.h
Src/gui/at_console/: at_console.cpp  at_console.h  command_entry.cpp  command_entry.h
Src/gui/browser_screen/: browser_screen.cpp  browser_screen.h
Src/gui/main_screen/: main_screen.cpp  main_screen.h  notification.cpp  notification.h
Src/gui/messages_screen/: chat_entry.cpp  chat_entry.h  messages_screen.cpp  messages_screen.h
Src/gui/messages_screen/chat_screen/: chat_screen.cpp  chat_screen.h  message_entry.cpp  message_entry.h
Src/gui/misc/: call_screen.cpp  call_screen.h  restart_overlay.cpp  restart_overlay.h  status_bar.cpp  status_bar.h
Src/gui/phone_screen/: phone_screen.cpp  phone_screen.h
Src/gui/phone_screen/contacts_screen/: contact_dialog.cpp  contact_dialog.h  contact_entry.cpp  contact_entry.h  contacts_screen.cpp  contacts_screen.h
Src/gui/phone_screen/history_screen/: history_entry.cpp  history_entry.h  history_screen.cpp  history_screen.h
Src/gui/phone_screen/keypad_screen/: keypad_screen.cpp  keypad_screen.h  ussd_dialog.cpp  ussd_dialog.h
Src/gui/settings_screen/: settings_screen.cpp  settings_screen.h
Src/gui/settings_screen/about_device_screen/: about_device_screen.cpp  about_device_screen.h
Src/gui/utils/: fa.h  gui_utils.h  waitingspinnerwidget.cpp
Src/libs/QtAwesome/: CMakeLists.txt
Src/libs/QtAwesome/QtAwesome/: QtAwesome.cpp  QtAwesome.h  QtAwesomeEnumGenerated.h  QtAwesomePro.qrc
Src/libs/QtAwesome/tools/: build_headers.rb
Src/libs/pdulib/: pdulib.cpp
Src/style/: stylesheet.qss
assets/: at_commands.txt
